<resources>
    <string name="app_name">FoodWorld</string>
    <string name="next">Next</string>
    <string name="textvieenjoy_restaurant_quality_meals_at_home">TextVieEnjoy Restaurant Quality Meals at Home</string>
    <string name="image">Image</string>
    <string name="design_by_n_alam_nawazsha">Design By \n Alam NawazSha</string>
    <string name="deliever_favorite_food">Deliever Favorite Food</string>
    <string name="food_world">Food World</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="password">Password</string>
    <string name="don_t_have_account">Don’t Have Account?</string>
    <string name="facebook">FaceBook</string>
    <string name="login">Login</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="name">Name</string>
    <string name="or_n_continue_with">Or\n Continue With</string>
    <string name="or_singUp_with">or\n Sing Up with</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="user">User</string>
    <string name="explore_your_favorite_food">Explore Your Favorite Food</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_menu">View Menu</string>
    <string name="popular">Popular</string>
    <string name="proceed">Proceed</string>
    <string name="food_name">Food Name</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="buy_again">Buy Again</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="congrats_n_your_order_placed">Congrats \n Your Order Placed</string>
    <string name="go_home">Go Home</string>
</resources>