<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserApp.Activity.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="92dp"
        android:layout_height="91dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="242dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/aladin"
        android:text="@string/food_world"
        android:textAlignment="center"
        android:textColor="#020202"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="154dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:text="@string/deliever_favorite_food"
        android:textAlignment="center"
        android:textColor="@color/Green"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="242sp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up_here"
        android:fontFamily="@font/aladin"
        android:textAlignment="center"
        android:textColor="@color/Green"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textpass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/name"
        app:boxStrokeColor="@color/Green"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:startIconDrawable="@drawable/user_02"
        app:startIconTint="@color/Green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Signup_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:maxLength="40"
            android:singleLine="true"
            android:visibility="visible" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        app:boxStrokeColor="@color/Green"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        app:startIconDrawable="@drawable/lock_01"
        app:startIconTint="@color/Green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Signup_Password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:maxLength="40"
            android:singleLine="true"
            android:visibility="visible" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/email_or_phone_number"
        app:boxStrokeColor="@color/Green"
        app:layout_constraintEnd_toEndOf="@+id/textpass"
        app:layout_constraintStart_toStartOf="@+id/textpass"
        app:layout_constraintTop_toBottomOf="@+id/textpass"
        app:startIconDrawable="@drawable/baseline_email_24"
        app:startIconTint="@color/Green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_Email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:maxLength="40"
            android:singleLine="true"
            android:visibility="visible" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/aladin"
        android:text="@string/or_singUp_with"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Facebook_signup_btn"
        android:layout_width="157dp"
        android:layout_height="57dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/icons8_facebook__1_"
        android:text="@string/facebook"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/Google_signup_btn"
        app:layout_constraintEnd_toStartOf="@+id/Google_signup_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Google_signup_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Google_signup_btn"
        android:layout_width="157dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="80dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/icons8_google"
        android:text="Google"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:ignore="HardcodedText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_btn"
        android:layout_width="157dp"
        android:layout_height="57dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/gree_button"
        android:fontFamily="@font/aladin"
        android:text="@string/create_account"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/Google_signup_btn"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="@+id/Facebook_signup_btn"
        app:layout_constraintTop_toBottomOf="@+id/Google_signup_btn" />

    <TextView
        android:id="@+id/Have_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:textAlignment="center"
        android:textColor="@color/Green"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/signup_btn"
        app:layout_constraintStart_toStartOf="@+id/signup_btn"
        app:layout_constraintTop_toBottomOf="@+id/signup_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>